# dcc-mcp-core

./: .commit-msg.tmp  .commitmsg.txt  .coveragerc  .git-commit-msg.tmp  .git-commit-msg.txt  .gitignore  .markdownlint.json  .prbody.md  .pre-commit-config.yaml  .release-please-manifest.json  .vx.toml  AGENTS.md  AI_AGENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_TODO.md  CODEBUDDY.md  CONTRIBUTING.md  COPILOT.md  Cargo.toml  DCC_ADAPTER_ABSTRACTION_ANALYSIS.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  README.md  README_zh.md  _commit_msg_319.txt  codecov.yml  commit-msg.txt  commit_msg.txt  dcc-mcp-catalog.yml  dcc-mcp-core-PRD.md  deny.toml  downloader_test_coverage_analysis.txt  justfile  llms-full.txt  llms.txt  noxfile.py  pyproject.toml  pytest.ini  release-notes.md  (+3 more)
crates/dcc-mcp-actions/: Cargo.toml
crates/dcc-mcp-actions/src/: chain.rs  chain_exec.rs  chain_interpolate.rs  chain_tests.rs  chain_types.rs  dispatch_context.rs  dispatcher.rs  events.rs  lib.rs  pipeline.rs  python.rs  registry.rs  validation_strategy.rs  validator.rs  versioned.rs
crates/dcc-mcp-app-ui/: Cargo.toml  README.md
crates/dcc-mcp-app-ui/src/: lib.rs
crates/dcc-mcp-artefact/: Cargo.toml
crates/dcc-mcp-artefact/src/: lib.rs  lib_tests.rs  python.rs  script_materialization.rs
crates/dcc-mcp-capture/: Cargo.toml
crates/dcc-mcp-capture/src/: capture.rs  capturer.rs  error.rs  lib.rs  python.rs  python_tests.rs  types.rs  window.rs
crates/dcc-mcp-catalog/: Cargo.toml
crates/dcc-mcp-catalog/src/: error.rs  lib.rs
crates/dcc-mcp-cli/: Cargo.toml
crates/dcc-mcp-cli/src/: main.rs
crates/dcc-mcp-cli/src/domain/: mod.rs  (+3 more)
crates/dcc-mcp-cli/tests/: cli_auto_gateway.rs  cli_e2e.rs
crates/dcc-mcp-db/: Cargo.toml
crates/dcc-mcp-db/src/: lib.rs
crates/dcc-mcp-gateway/: Cargo.toml  build.rs
crates/dcc-mcp-gateway-core/: Cargo.toml  README.md
crates/dcc-mcp-gateway-core/src/: event.rs  lib.rs  naming.rs  openapi.rs  policy.rs  resource_uri.rs
crates/dcc-mcp-gateway-ensure/: Cargo.toml
crates/dcc-mcp-gateway-ensure/src/: lib.rs
crates/dcc-mcp-gateway-search/: Cargo.toml
crates/dcc-mcp-gateway-search/src/: engine.rs  lib.rs  query.rs  ranking.rs  record.rs
crates/dcc-mcp-gateway-search/tests/: regression_994_meta_tools_negative_rank.rs
crates/dcc-mcp-gateway/benches/: search_bench.rs
crates/dcc-mcp-gateway/src/: lib.rs  main.rs
crates/dcc-mcp-host/: Cargo.toml
crates/dcc-mcp-host-rpc/: Cargo.toml
crates/dcc-mcp-host-rpc/python/: dcc_qt_dispatcher.py  dcc_qt_dispatcher_bootstrap.py  maya_sidecar_bootstrap.py
crates/dcc-mcp-host-rpc/src/: commandport.rs  lib.rs  qtserver.rs  registry.rs  websocket.rs
crates/dcc-mcp-host/src/: lib.rs  python.rs
crates/dcc-mcp-http/: Cargo.toml
crates/dcc-mcp-http-py/: Cargo.toml
crates/dcc-mcp-http-py/src/: bridge.rs  config.rs  lib.rs  output_dynamic.rs  prompts_handle.rs  readiness.rs  resources_handle.rs  server.rs  session_events.rs  skill_server.rs  workspace.rs
crates/dcc-mcp-http-server/: Cargo.toml  README.md
crates/dcc-mcp-http-server/src/: dynamic_tools.rs  executor.rs  host_bridge.rs  inflight.rs  lib.rs  mcp_tool_catalog.rs  mcp_tool_list_builder.rs  notifications.rs  rmcp_adapter.rs  rmcp_handler.rs  rmcp_initialize.rs  rmcp_providers.rs  rmcp_registry_context.rs  rmcp_tool_call_async.rs  rmcp_tool_call_dispatch.rs  server_state.rs  session.rs  thread_routed_invoker.rs  tool_list_legacy.rs  workspace.rs
crates/dcc-mcp-http-types/: Cargo.toml  README.md
crates/dcc-mcp-http-types/src/: config.rs  debug_session.rs  dynamic_tools.rs  error.rs  lib.rs  output.rs  prompts.rs  resources.rs  session.rs  session_events.rs  ui_automation.rs
crates/dcc-mcp-http/src/: bridge_registry.rs  config.rs  dynamic_tools.rs  error.rs  executor.rs  handler.rs  handler_dispatch.rs  handler_routes.rs  handler_state.rs  host_bridge.rs  inflight.rs  job.rs  job_manager.rs  job_types.rs  lib.rs  metrics.rs  notifications.rs  output.rs  payload.rs  prompts.rs  prompts_loader.rs  prompts_spec.rs  prompts_template.rs  protocol.rs  protocol_jsonrpc.rs  protocol_lifecycle.rs  protocol_prompts.rs  protocol_resources.rs  protocol_sse.rs  protocol_tools.rs  resource_link.rs  resources.rs  resources_producers.rs  resources_tests.rs  resources_types.rs  rest_providers.rs  router.rs  server.rs  server_background.rs  server_gateway.rs  (+5 more)
crates/dcc-mcp-http/tests/: backend_timeout.rs  gateway_passthrough.rs  gateway_reachability.rs  http.rs  notifications.rs  resources.rs
crates/dcc-mcp-job/: Cargo.toml
crates/dcc-mcp-job/src/: lib.rs
crates/dcc-mcp-jsonrpc/: Cargo.toml
crates/dcc-mcp-jsonrpc/src/: jsonrpc.rs  lib.rs  lifecycle.rs  notification_builder.rs  prompts.rs  sse.rs  tools.rs
crates/dcc-mcp-logging/: Cargo.toml
crates/dcc-mcp-logging/src/: config.rs  constants.rs  lib.rs
crates/dcc-mcp-marketplace/: Cargo.toml
crates/dcc-mcp-marketplace/src/: add_repo.rs  error.rs  lib.rs  path.rs  service.rs  source.rs  types.rs
crates/dcc-mcp-models/: Cargo.toml
crates/dcc-mcp-models/src/: action_result.rs  action_result_tests.rs  dcc_name.rs  error.rs  lib.rs  registry.rs  skill_metadata.rs  skill_scope.rs
crates/dcc-mcp-naming/: Cargo.toml
crates/dcc-mcp-naming/src/: lib.rs  python.rs
crates/dcc-mcp-paths/: Cargo.toml
crates/dcc-mcp-paths/src/: lib.rs  python.rs
crates/dcc-mcp-process/: Cargo.toml
crates/dcc-mcp-process/src/: dispatcher.rs  error.rs  launcher.rs  lib.rs  monitor.rs  pump.rs  python.rs  python_crash_policy.rs  python_launcher.rs  python_monitor.rs  python_pumped_dispatcher.rs  python_standalone_dispatcher.rs  python_watcher.rs  recovery.rs  types.rs  watcher.rs
crates/dcc-mcp-protocols/: Cargo.toml
crates/dcc-mcp-protocols/src/: adapters.rs  adapters_python.rs  bridge.rs  error_envelope.rs  lib.rs  mock.rs  types.rs  types_prompts.rs  types_resources.rs  types_tools.rs
crates/dcc-mcp-pybridge/: Cargo.toml
crates/dcc-mcp-pybridge-derive/: Cargo.toml
crates/dcc-mcp-pybridge-derive/src/: codegen.rs  lib.rs  parse.rs
crates/dcc-mcp-pybridge/src/: lib.rs  py_json.rs  py_yaml.rs  type_wrappers.rs
(+2167 files in other folders)
