# dcc-mcp-core Workspace
# Rust-powered core for the DCC MCP ecosystem

[workspace]
members = [
    "crates/dcc-mcp-models",
    "crates/dcc-mcp-actions",
    "crates/dcc-mcp-skills",
    "crates/dcc-mcp-protocols",
    "crates/dcc-mcp-utils",
    "crates/dcc-mcp-transport",
    "crates/dcc-mcp-process",
    "crates/dcc-mcp-telemetry",
    "crates/dcc-mcp-sandbox",
    "crates/dcc-mcp-shm",
    "crates/dcc-mcp-capture",
    "crates/dcc-mcp-usd",
]
resolver = "2"

[workspace.package]
version = "0.12.2" # x-release-please-version
edition = "2024"
rust-version = "1.85"
authors = ["Hal Long <hal.long@outlook.com>"]
license = "MIT"
repository = "https://github.com/loonghao/dcc-mcp-core"

[workspace.dependencies]
# Internal crates
dcc-mcp-models = { path = "crates/dcc-mcp-models" }
dcc-mcp-actions = { path = "crates/dcc-mcp-actions" }
dcc-mcp-skills = { path = "crates/dcc-mcp-skills" }
dcc-mcp-protocols = { path = "crates/dcc-mcp-protocols" }
dcc-mcp-utils = { path = "crates/dcc-mcp-utils" }
dcc-mcp-transport = { path = "crates/dcc-mcp-transport" }
dcc-mcp-process = { path = "crates/dcc-mcp-process" }
dcc-mcp-telemetry = { path = "crates/dcc-mcp-telemetry" }
dcc-mcp-sandbox = { path = "crates/dcc-mcp-sandbox" }
dcc-mcp-shm = { path = "crates/dcc-mcp-shm" }
dcc-mcp-capture = { path = "crates/dcc-mcp-capture" }
dcc-mcp-usd = { path = "crates/dcc-mcp-usd" }

# Shared dependencies (single version across workspace)
pyo3 = { version = "0.28", features = ["multiple-pymethods"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
dashmap = "6.1"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "sync", "time", "macros", "io-util"] }
rmp-serde = "1.3"
sysinfo = "0.33"
memmap2 = "0.9"
lz4_flex = { version = "0.11", default-features = false, features = ["frame"] }
libc = "0.2"
notify = "6.1"

# Root package — Python bindings entry point
# Compiles to `_core.pyd` / `_core.so`, exposed as `dcc_mcp_core._core`
[package]
name = "dcc-mcp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Foundational library for the DCC Model Context Protocol (MCP) ecosystem"
keywords = ["dcc", "mcp", "maya", "blender", "houdini", "pyo3"]

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal crates
dcc-mcp-models.workspace = true
dcc-mcp-actions.workspace = true
dcc-mcp-skills.workspace = true
dcc-mcp-protocols.workspace = true
dcc-mcp-utils.workspace = true
dcc-mcp-transport.workspace = true
dcc-mcp-process.workspace = true
dcc-mcp-telemetry.workspace = true
dcc-mcp-sandbox.workspace = true
dcc-mcp-shm.workspace = true
dcc-mcp-capture.workspace = true
dcc-mcp-usd.workspace = true

# PyO3 (optional — only for wheel builds)
pyo3 = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
default = []
python-bindings = ["pyo3", "dcc-mcp-models/python-bindings", "dcc-mcp-actions/python-bindings", "dcc-mcp-skills/python-bindings", "dcc-mcp-protocols/python-bindings", "dcc-mcp-utils/python-bindings", "dcc-mcp-transport/python-bindings", "dcc-mcp-process/python-bindings", "dcc-mcp-telemetry/python-bindings", "dcc-mcp-sandbox/python-bindings", "dcc-mcp-shm/python-bindings", "dcc-mcp-capture/python-bindings", "dcc-mcp-usd/python-bindings"]
abi3-py38 = ["pyo3/abi3-py38"]
ext-module = ["pyo3/extension-module"]
