[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dcc-mcp-core"
version = "0.14.25" # x-release-please-version
description = "Foundational library for the DCC Model Context Protocol (MCP) ecosystem"
authors = [
    {name = "Hal Long", email = "hal.long@outlook.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
keywords = ["dcc", "mcp", "maya", "blender", "houdini", "rust", "pyo3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "rez",
]
dev = [
    "dcc-mcp-core[test]",
    "ruff>=0.8.0",
    "mypy>=1.0",
    "maturin>=1.0",
]

[project.urls]
Homepage = "https://github.com/loonghao/dcc-mcp-core"
Repository = "https://github.com/loonghao/dcc-mcp-core"
Issues = "https://github.com/loonghao/dcc-mcp-core/issues"

[tool.maturin]
python-source = "python"
module-name = "dcc_mcp_core._core"
# Feature list MUST stay in sync with `WHEEL_FEATURES` in the root justfile.
# The justfile is the single source of truth for CI; this list only matters
# for downstream `pip install .` / sdist rebuilds that bypass our CI.
features = ["python-bindings", "ext-module", "abi3-py38", "workflow", "scheduler", "prometheus", "job-persist-sqlite"]
bindings = "pyo3"

[tool.mypy]
python_version = "3.7"
strict = true
ignore_missing_imports = true
disable_error_code = ["type-arg", "misc", "no-any-return"]

[tool.ruff]
line-length = 120
target-version = "py37"
src = ["python/dcc_mcp_core", "tests", "examples"]
# `_core.pyi` is regenerated from the Rust extension by `pyo3-stub-gen`
# on every build; running ruff against it produces ~1k spurious diffs
# that would just get clobbered the next time `maturin develop` runs.
extend-exclude = ["python/dcc_mcp_core/_core.pyi"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "D", # pydocstyle
    "I", # isort (replaces standalone isort)
    "UP", # pyupgrade
    "RUF", # ruff-specific rules
    "PTH", # pathlib migration hints
    "SIM", # simplification
    "B", # bugbear
]
ignore = ["D203", "D213", "D107", "D105", "D102"]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
known-first-party = ["dcc_mcp_core"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["F401", "F811", "F821", "E711", "E712", "SIM117", "SIM118", "D100", "D101", "D103", "D106", "D205", "D400", "D415", "E501"]
"examples/**/*.py" = ["D100", "D101", "D103", "D104", "E402", "INP001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "dcc: marks tests that require a DCC application (e.g., Blender)",
]
