[package]
name = "dcc-mcp-actions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Action registry and event system for the DCC-MCP ecosystem"

[dependencies]
pyo3 = { workspace = true, optional = true }
dcc-mcp-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[features]
default = []
python-bindings = ["pyo3", "dcc-mcp-utils/python-bindings"]
