[package]
name = "dcc-mcp-app-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DCC-agnostic app_ui observation, action, wait, policy, and audit contract types"
keywords = ["dcc", "ui", "automation", "mcp", "types"]
categories = ["api-bindings"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
