[package]
name = "dcc-mcp-artefact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FileRef + content-addressed ArtefactStore for DCC-MCP artefact hand-off between tools and workflow steps (issue #349)"

[dependencies]
pyo3 = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
default = []
python-bindings = ["dep:pyo3"]
