[package]
name = "dcc-mcp-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Public DCC-MCP catalog for ecosystem discovery — adapters, skill packs, and plugins"

[dependencies]
jsonschema = "0.28"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tempfile = "3"
