[package]
name = "dcc-mcp-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistence contracts, path policies, gateway admin SQLite, and shared DDL for DCC-MCP."

[features]
default = []
gateway-admin-sqlite = ["dep:rusqlite", "dep:tracing"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tempfile = "3"
