[package]
name = "dcc-mcp-gateway-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Domain layer for the DCC MCP gateway — pure types, no HTTP/IO."
keywords = ["mcp", "gateway", "domain", "clean-architecture"]
categories = ["api-bindings"]

[lints]
workspace = true

[dependencies]
# Domain types are part of the REST wire contract (`POST /v1/search`
# returns CapabilityRecord arrays), so serde is a hard dependency.
serde = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dcc-mcp-gateway-search = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
serde_json = { workspace = true }
